--- a/index.html
+++ b/index.html
@@ -440,6 +440,10 @@
           </div>
         </div>
       </footer>
+      <div class="credit">
+        <p class="name"> &copy; RIDHIMA BHASIN</p>
+        <p class="developer">Designed and Developed by Bishal Kumar Shaw</p>
+      </div>
     </div>
 </div>
 
