--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
           </div>
         </div>
       </footer>
-      <div class="credit">
+      <div class="credit container">
         <p class="name"> &copy; RIDHIMA BHASIN</p>
         <p class="developer">Designed and Developed by Bishal Kumar Shaw</p>
       </div>
